making sure gh copilot is in path

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "files": [
       "out/**/*"
     ],
+    "asarUnpack": [
+      "node_modules/@github/copilot-*/**/*"
+    ],
     "mac": {
       "category": "public.app-category.developer-tools",
       "icon": "build/icon.icns"
