--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@github/copilot-sdk": "0.1.15",
+    "@microsoft/clarity": "^1.0.2",
     "@xterm/addon-fit": "^0.11.0",
     "@xterm/xterm": "^6.0.0",
     "electron-log": "^5.4.3",
