--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:e2e:headed": "npm run build && npx playwright test --headed",
     "test:integration": "node --import tsx/esm tests/integration/choice-detection.test.ts",
     "test:all": "npm run test && npm run test:e2e",
-    "postinstall": "npx patch-package && npx @electron/rebuild -f -w node-pty",
+    "postinstall": "npx patch-package && npx @electron/rebuild -w node-pty",
     "rebuild-pty": "npx @electron/rebuild -f -w node-pty",
     "prebuild-info": "node scripts/build-info.js",
     "clean": "node -e \"const fs=require('fs');['out','release'].forEach(d=>{try{fs.rmSync(d,{recursive:true,force:true})}catch{}})\"",
