--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -30,9 +30,24 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
 
+      # Cache the compiled node-pty native module to speed up Windows builds
+      - name: Cache node-pty build (Windows)
+        if: runner.os == 'Windows'
+        id: cache-node-pty
+        uses: actions/cache@v4
+        with:
+          path: |
+            node_modules/node-pty/build
+            node_modules/node-pty/prebuilds
+          key: node-pty-${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
+
       - name: Install dependencies (Windows)
         if: runner.os == 'Windows'
-        run: npm ci
+        run: npm ci --ignore-scripts && npx patch-package
+
+      - name: Rebuild node-pty (Windows, cache miss)
+        if: runner.os == 'Windows' && steps.cache-node-pty.outputs.cache-hit != 'true'
+        run: npx @electron/rebuild -w node-pty
 
       - name: Install dependencies (Unix)
         if: runner.os != 'Windows'
