Feature/150 figure out if this node pty thing is a must have f (#164)
* fix(build): remove -f flag from electron rebuild in postinstall script

* ci: cache node-pty build on Windows to speed up CI

- Skip rebuild when cache hit for node-pty native module
- First build will still be slow, but subsequent builds use cache
- Only applies to Windows (most problematic platform)

* ci: add restore-keys for cross-branch cache sharing

--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -40,6 +40,8 @@ jobs:
             node_modules/node-pty/build
             node_modules/node-pty/prebuilds
           key: node-pty-${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            node-pty-${{ runner.os }}-node${{ matrix.node-version }}-
 
       - name: Install dependencies (Windows)
         if: runner.os == 'Windows'
