--- a/package.json
+++ b/package.json
@@ -65,12 +65,15 @@
     "@xterm/xterm": "^6.0.0",
     "electron-log": "^5.4.3",
     "electron-store": "^11.0.0",
+    "ffmpeg-static": "^5.3.0",
     "node-pty": "^1.1.0",
     "playwright": "^1.58.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "unzipper": "^0.12.3",
+    "vosk-koffi": "^1.1.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
