fix(ci): categorize binaries per Apple signing docs, notarize via zip

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -208,7 +208,8 @@ jobs:
           AZURE_CODE_SIGNING_ACCOUNT: ${{ secrets.AZURE_CODE_SIGNING_ACCOUNT }}
           AZURE_CERT_PROFILE: ${{ secrets.AZURE_CERT_PROFILE }}
 
-      - name: Upload artifacts
+      # Upload pre-notarization artifacts so we have the signed DMG even if notarization fails
+      - name: Upload artifacts (pre-notarization)
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.artifact_name }}
@@ -219,7 +220,9 @@ jobs:
           if-no-files-found: error
           retention-days: 5
 
-      - name: Notarize macOS DMG
+      # Apple best practice: submit .app as zip (faster than DMG), staple .app, recreate DMG.
+      # See: "Creating Distribution-Signed Code for Mac" — Apple DTS
+      - name: Notarize macOS app
         if: runner.os == 'macOS' && env.CSC_KEYCHAIN != ''
         timeout-minutes: 30
         env:
@@ -227,16 +230,58 @@ jobs:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
           APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
         run: |
-          DMG=$(ls release/*.dmg | head -1)
-          echo "Submitting $DMG for notarization..."
-          xcrun notarytool submit "$DMG" \
+          APP_PATH="release/mac-arm64/Cooper.app"
+          echo "::group::Zip .app for notarization"
+          ditto -c -k --keepParent "$APP_PATH" release/Cooper.app.zip
+          echo "Zip size: $(du -h release/Cooper.app.zip | cut -f1)"
+          echo "::endgroup::"
+
+          echo "::group::Submit to Apple notary service"
+          xcrun notarytool submit release/Cooper.app.zip \
             --apple-id "$APPLE_ID" \
             --team-id "$APPLE_TEAM_ID" \
             --password "$APPLE_APP_SPECIFIC_PASSWORD" \
-            --wait --timeout 30m
-          echo "Stapling notarization ticket..."
-          xcrun stapler staple "$DMG"
-          echo "Notarization complete"
+            --wait --timeout 20m \
+            --verbose
+          echo "::endgroup::"
+
+          echo "::group::Staple notarization ticket"
+          xcrun stapler staple "$APP_PATH"
+          echo "::endgroup::"
+
+          echo "::group::Verify signature"
+          codesign --verify --deep --strict --verbose=2 "$APP_PATH"
+          echo "::endgroup::"
+
+          echo "::group::Recreate DMG with stapled app"
+          VERSION=$(node -p "require('./package.json').version")
+          DMG_NAME="Cooper-${VERSION}-arm64.dmg"
+          rm -f "release/${DMG_NAME}"
+
+          # Create DMG staging with .app and Applications symlink
+          STAGING=$(mktemp -d)
+          cp -R "$APP_PATH" "$STAGING/"
+          ln -s /Applications "$STAGING/Applications"
+          hdiutil create -volname "Cooper" \
+            -srcfolder "$STAGING" \
+            -ov -format UDZO \
+            "release/${DMG_NAME}"
+          rm -rf "$STAGING"
+
+          echo "Final DMG: $(du -h "release/${DMG_NAME}" | cut -f1)"
+          echo "::endgroup::"
+
+      # Re-upload macOS artifact with notarized+stapled DMG (overwrites pre-notarization)
+      - name: Upload artifacts (notarized)
+        if: runner.os == 'macOS' && env.CSC_KEYCHAIN != ''
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.artifact_name }}
+          path: |
+            release/*.dmg
+            !release/*.blockmap
+          overwrite: true
+          retention-days: 5
 
   # ---------------------------------------------------------------------------
   # Job 3: Create GitHub Release with artifacts
