docs: add Release section to CONTRIBUTING.md and remove test branch trigger

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   push:
-    branches: [main, staging, feature/release-binaries]
+    branches: [main, staging]
     paths-ignore:
       - '*.md'
       - 'docs/**'
