ci: upload PR artifacts, restrict releases to main/staging
- build-pr.yml: upload unsigned DMG/Setup/Portable artifacts (3-day
  retention) so reviewers can test binaries from PRs
- release.yml: add branch guard — workflow_dispatch on branches other
  than main/staging is rejected with a warning
- CONTRIBUTING.md: update docs to reflect PR artifact workflow, remove
  'Any other branch' release type, document feature branch testing via
  PR artifacts

--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -85,3 +85,31 @@ jobs:
       - name: Package distributables (Windows, unsigned)
         if: runner.os == 'Windows'
         run: npx electron-builder --win --publish never
+
+      # --- Upload artifacts for reviewers to test ---
+      - name: Upload DMG (macOS)
+        if: runner.os == 'macOS'
+        uses: actions/upload-artifact@v4
+        with:
+          name: Cooper-DMG
+          path: release/*.dmg
+          if-no-files-found: error
+          retention-days: 3
+
+      - name: Upload Installer (Windows)
+        if: runner.os == 'Windows'
+        uses: actions/upload-artifact@v4
+        with:
+          name: Cooper-Setup
+          path: release/*-Setup.exe
+          if-no-files-found: error
+          retention-days: 3
+
+      - name: Upload Portable (Windows)
+        if: runner.os == 'Windows'
+        uses: actions/upload-artifact@v4
+        with:
+          name: Cooper-Portable
+          path: release/*-Portable.exe
+          if-no-files-found: error
+          retention-days: 3
